parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    RBRAK
    VGLOBAL
    CLASE
    COLON
    LBRAK

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA ID LLLAVE programa_push_id vars programa_push_dict body RLLAVE
Rule 2     programa_push_id -> <empty>
Rule 3     programa_push_dict -> <empty>
Rule 4     vars -> VAR vars2
Rule 5     vars -> empty
Rule 6     vars2 -> tipo ID vars_push_id vars3 SEMICOL vars4
Rule 7     vars_push_id -> <empty>
Rule 8     vars3 -> COMMA ID vars3_push_id vars3
Rule 9     vars3 -> empty
Rule 10    vars3_push_id -> <empty>
Rule 11    vars4 -> vars2
Rule 12    vars4 -> empty
Rule 13    tipo -> ENTERO
Rule 14    tipo -> DECIMAL
Rule 15    tipo -> FRASE
Rule 16    tipo -> ESVERDAD
Rule 17    empty -> <empty>
Rule 18    body -> funcion body
Rule 19    body -> bloque body
Rule 20    body -> empty
Rule 21    bloque -> estatuto
Rule 22    bloque -> empty
Rule 23    funcion -> FUNCION funcion_increase_func tipo ID funcion_push_id LPAREN funparam RPAREN LLLAVE vars bloque RLLAVE
Rule 24    funcion_increase_func -> <empty>
Rule 25    funcion_push_id -> <empty>
Rule 26    funparam -> tipo ID funparam_push_id funparams
Rule 27    funparam -> empty
Rule 28    funparam_push_id -> <empty>
Rule 29    funparams -> COMMA funparam
Rule 30    funparams -> empty
Rule 31    estatuto -> asignacion bloque
Rule 32    estatuto -> condicion bloque
Rule 33    estatuto -> mientras bloque
Rule 34    estatuto -> para bloque
Rule 35    estatuto -> escritura bloque
Rule 36    estatuto -> llamada bloque
Rule 37    asignacion -> ID asignacion_push_id IGUAL asignacion_push_igual expresion
Rule 38    asignacion_push_id -> <empty>
Rule 39    asignacion_push_igual -> <empty>
Rule 40    llamada -> ID LPAREN llamadaparam RPAREN
Rule 41    llamadaparam -> valor llamadaparams
Rule 42    llamadaparam -> empty
Rule 43    llamadaparams -> COMMA llamadaparam
Rule 44    llamadaparams -> empty
Rule 45    expresion -> exp expresions
Rule 46    expresion -> LEE LPAREN STRING RPAREN SEMICOL
Rule 47    expresions -> MAYOR expresions_push_mayor exp
Rule 48    expresions -> MENOR expresions_push_menor exp
Rule 49    expresions -> COMPARA expresions_push_compara exp
Rule 50    expresions -> exp
Rule 51    expresions -> empty
Rule 52    expresions_push_mayor -> <empty>
Rule 53    expresions_push_menor -> <empty>
Rule 54    expresions_push_compara -> <empty>
Rule 55    exp -> termino exps
Rule 56    exps -> PLUS exps_push_plus termino exps
Rule 57    exps -> MINUS exps_push_minus termino exps
Rule 58    exps -> empty
Rule 59    exps_push_plus -> <empty>
Rule 60    exps_push_minus -> <empty>
Rule 61    termino -> factor terminos
Rule 62    terminos -> TIMES terminos_push_times factor terminos
Rule 63    terminos -> DIVIDE terminos_push_divide factor terminos
Rule 64    terminos -> empty
Rule 65    terminos_push_times -> <empty>
Rule 66    terminos_push_divide -> <empty>
Rule 67    factor -> LPAREN factor_lparen expresion RPAREN factor_rparen
Rule 68    factor -> valor
Rule 69    factor_lparen -> <empty>
Rule 70    factor_rparen -> <empty>
Rule 71    valor -> ID
Rule 72    valor -> CTEINT
Rule 73    valor -> CTEDEC
Rule 74    valor -> llamada
Rule 75    condicion -> SI LPAREN expresion RPAREN condicion_if LLLAVE estatuto RLLAVE else
Rule 76    condicion_if -> <empty>
Rule 77    else -> SINO else_2 LLLAVE estatuto RLLAVE
Rule 78    else -> empty
Rule 79    else_2 -> <empty>
Rule 80    para -> PARA ID ENRANGO LPAREN param COMMA param RPAREN LLLAVE estatuto RLLAVE
Rule 81    param -> ID
Rule 82    param -> CTEINT
Rule 83    mientras -> HAZ mientras_haz_push LLLAVE estatuto RLLAVE MIENTRAS LPAREN expresion RPAREN
Rule 84    mientras_haz_push -> <empty>
Rule 85    escritura -> IMPRIME escritura_escribe LPAREN esc RPAREN
Rule 86    escritura_escribe -> <empty>
Rule 87    esc -> expresion escs
Rule 88    esc -> STRING escs
Rule 89    escs -> COMMA esc
Rule 90    escs -> empty

Terminals, with rules where they appear

CLASE                : 
COLON                : 
COMMA                : 8 29 43 80 89
COMPARA              : 49
CTEDEC               : 73
CTEINT               : 72 82
DECIMAL              : 14
DIVIDE               : 63
ENRANGO              : 80
ENTERO               : 13
ESVERDAD             : 16
FRASE                : 15
FUNCION              : 23
HAZ                  : 83
ID                   : 1 6 8 23 26 37 40 71 80 81
IGUAL                : 37
IMPRIME              : 85
LBRAK                : 
LEE                  : 46
LLLAVE               : 1 23 75 77 80 83
LPAREN               : 23 40 46 67 75 80 83 85
MAYOR                : 47
MENOR                : 48
MIENTRAS             : 83
MINUS                : 57
PARA                 : 80
PLUS                 : 56
PROGRAMA             : 1
RBRAK                : 
RLLAVE               : 1 23 75 77 80 83
RPAREN               : 23 40 46 67 75 80 83 85
SEMICOL              : 6 46
SI                   : 75
SINO                 : 77
STRING               : 46 88
TIMES                : 62
VAR                  : 4
VGLOBAL              : 
error                : 

Nonterminals, with rules where they appear

asignacion           : 31
asignacion_push_id   : 37
asignacion_push_igual : 37
bloque               : 19 23 31 32 33 34 35 36
body                 : 1 18 19
condicion            : 32
condicion_if         : 75
else                 : 75
else_2               : 77
empty                : 5 9 12 20 22 27 30 42 44 51 58 64 78 90
esc                  : 85 89
escritura            : 35
escritura_escribe    : 85
escs                 : 87 88
estatuto             : 21 75 77 80 83
exp                  : 45 47 48 49 50
expresion            : 37 67 75 83 87
expresions           : 45
expresions_push_compara : 49
expresions_push_mayor : 47
expresions_push_menor : 48
exps                 : 55 56 57
exps_push_minus      : 57
exps_push_plus       : 56
factor               : 61 62 63
factor_lparen        : 67
factor_rparen        : 67
funcion              : 18
funcion_increase_func : 23
funcion_push_id      : 23
funparam             : 23 29
funparam_push_id     : 26
funparams            : 26
llamada              : 36 74
llamadaparam         : 40 43
llamadaparams        : 41
mientras             : 33
mientras_haz_push    : 83
para                 : 34
param                : 80 80
programa             : 0
programa_push_dict   : 1
programa_push_id     : 1
termino              : 55 56 57
terminos             : 61 62 63
terminos_push_divide : 63
terminos_push_times  : 62
tipo                 : 6 23 26
valor                : 41 68
vars                 : 1 23
vars2                : 4 11
vars3                : 6 8
vars3_push_id        : 8
vars4                : 6
vars_push_id         : 6

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA ID LLLAVE programa_push_id vars programa_push_dict body RLLAVE

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . ID LLLAVE programa_push_id vars programa_push_dict body RLLAVE

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAMA ID . LLLAVE programa_push_id vars programa_push_dict body RLLAVE

    LLLAVE          shift and go to state 4


state 4

    (1) programa -> PROGRAMA ID LLLAVE . programa_push_id vars programa_push_dict body RLLAVE
    (2) programa_push_id -> .

    VAR             reduce using rule 2 (programa_push_id -> .)
    FUNCION         reduce using rule 2 (programa_push_id -> .)
    ID              reduce using rule 2 (programa_push_id -> .)
    SI              reduce using rule 2 (programa_push_id -> .)
    HAZ             reduce using rule 2 (programa_push_id -> .)
    PARA            reduce using rule 2 (programa_push_id -> .)
    IMPRIME         reduce using rule 2 (programa_push_id -> .)
    RLLAVE          reduce using rule 2 (programa_push_id -> .)

    programa_push_id               shift and go to state 5

state 5

    (1) programa -> PROGRAMA ID LLLAVE programa_push_id . vars programa_push_dict body RLLAVE
    (4) vars -> . VAR vars2
    (5) vars -> . empty
    (17) empty -> .

    VAR             shift and go to state 7
    FUNCION         reduce using rule 17 (empty -> .)
    ID              reduce using rule 17 (empty -> .)
    SI              reduce using rule 17 (empty -> .)
    HAZ             reduce using rule 17 (empty -> .)
    PARA            reduce using rule 17 (empty -> .)
    IMPRIME         reduce using rule 17 (empty -> .)
    RLLAVE          reduce using rule 17 (empty -> .)

    vars                           shift and go to state 6
    empty                          shift and go to state 8

state 6

    (1) programa -> PROGRAMA ID LLLAVE programa_push_id vars . programa_push_dict body RLLAVE
    (3) programa_push_dict -> .

    FUNCION         reduce using rule 3 (programa_push_dict -> .)
    ID              reduce using rule 3 (programa_push_dict -> .)
    SI              reduce using rule 3 (programa_push_dict -> .)
    HAZ             reduce using rule 3 (programa_push_dict -> .)
    PARA            reduce using rule 3 (programa_push_dict -> .)
    IMPRIME         reduce using rule 3 (programa_push_dict -> .)
    RLLAVE          reduce using rule 3 (programa_push_dict -> .)

    programa_push_dict             shift and go to state 9

state 7

    (4) vars -> VAR . vars2
    (6) vars2 -> . tipo ID vars_push_id vars3 SEMICOL vars4
    (13) tipo -> . ENTERO
    (14) tipo -> . DECIMAL
    (15) tipo -> . FRASE
    (16) tipo -> . ESVERDAD

    ENTERO          shift and go to state 15
    DECIMAL         shift and go to state 12
    FRASE           shift and go to state 10
    ESVERDAD        shift and go to state 14

    vars2                          shift and go to state 13
    tipo                           shift and go to state 11

state 8

    (5) vars -> empty .

    FUNCION         reduce using rule 5 (vars -> empty .)
    ID              reduce using rule 5 (vars -> empty .)
    SI              reduce using rule 5 (vars -> empty .)
    HAZ             reduce using rule 5 (vars -> empty .)
    PARA            reduce using rule 5 (vars -> empty .)
    IMPRIME         reduce using rule 5 (vars -> empty .)
    RLLAVE          reduce using rule 5 (vars -> empty .)


state 9

    (1) programa -> PROGRAMA ID LLLAVE programa_push_id vars programa_push_dict . body RLLAVE
    (18) body -> . funcion body
    (19) body -> . bloque body
    (20) body -> . empty
    (23) funcion -> . FUNCION funcion_increase_func tipo ID funcion_push_id LPAREN funparam RPAREN LLLAVE vars bloque RLLAVE
    (21) bloque -> . estatuto
    (22) bloque -> . empty
    (17) empty -> .
    (31) estatuto -> . asignacion bloque
    (32) estatuto -> . condicion bloque
    (33) estatuto -> . mientras bloque
    (34) estatuto -> . para bloque
    (35) estatuto -> . escritura bloque
    (36) estatuto -> . llamada bloque
    (37) asignacion -> . ID asignacion_push_id IGUAL asignacion_push_igual expresion
    (75) condicion -> . SI LPAREN expresion RPAREN condicion_if LLLAVE estatuto RLLAVE else
    (83) mientras -> . HAZ mientras_haz_push LLLAVE estatuto RLLAVE MIENTRAS LPAREN expresion RPAREN
    (80) para -> . PARA ID ENRANGO LPAREN param COMMA param RPAREN LLLAVE estatuto RLLAVE
    (85) escritura -> . IMPRIME escritura_escribe LPAREN esc RPAREN
    (40) llamada -> . ID LPAREN llamadaparam RPAREN

  ! shift/reduce conflict for FUNCION resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for SI resolved as shift
  ! shift/reduce conflict for HAZ resolved as shift
  ! shift/reduce conflict for PARA resolved as shift
  ! shift/reduce conflict for IMPRIME resolved as shift
    FUNCION         shift and go to state 29
    RLLAVE          reduce using rule 17 (empty -> .)
    ID              shift and go to state 28
    SI              shift and go to state 20
    HAZ             shift and go to state 27
    PARA            shift and go to state 18
    IMPRIME         shift and go to state 30

  ! FUNCION         [ reduce using rule 17 (empty -> .) ]
  ! ID              [ reduce using rule 17 (empty -> .) ]
  ! SI              [ reduce using rule 17 (empty -> .) ]
  ! HAZ             [ reduce using rule 17 (empty -> .) ]
  ! PARA            [ reduce using rule 17 (empty -> .) ]
  ! IMPRIME         [ reduce using rule 17 (empty -> .) ]

    mientras                       shift and go to state 16
    bloque                         shift and go to state 17
    estatuto                       shift and go to state 19
    llamada                        shift and go to state 21
    condicion                      shift and go to state 22
    empty                          shift and go to state 23
    funcion                        shift and go to state 24
    body                           shift and go to state 25
    para                           shift and go to state 26
    asignacion                     shift and go to state 31
    escritura                      shift and go to state 32

state 10

    (15) tipo -> FRASE .

    ID              reduce using rule 15 (tipo -> FRASE .)


state 11

    (6) vars2 -> tipo . ID vars_push_id vars3 SEMICOL vars4

    ID              shift and go to state 33


state 12

    (14) tipo -> DECIMAL .

    ID              reduce using rule 14 (tipo -> DECIMAL .)


state 13

    (4) vars -> VAR vars2 .

    FUNCION         reduce using rule 4 (vars -> VAR vars2 .)
    ID              reduce using rule 4 (vars -> VAR vars2 .)
    SI              reduce using rule 4 (vars -> VAR vars2 .)
    HAZ             reduce using rule 4 (vars -> VAR vars2 .)
    PARA            reduce using rule 4 (vars -> VAR vars2 .)
    IMPRIME         reduce using rule 4 (vars -> VAR vars2 .)
    RLLAVE          reduce using rule 4 (vars -> VAR vars2 .)


state 14

    (16) tipo -> ESVERDAD .

    ID              reduce using rule 16 (tipo -> ESVERDAD .)


state 15

    (13) tipo -> ENTERO .

    ID              reduce using rule 13 (tipo -> ENTERO .)


state 16

    (33) estatuto -> mientras . bloque
    (21) bloque -> . estatuto
    (22) bloque -> . empty
    (31) estatuto -> . asignacion bloque
    (32) estatuto -> . condicion bloque
    (33) estatuto -> . mientras bloque
    (34) estatuto -> . para bloque
    (35) estatuto -> . escritura bloque
    (36) estatuto -> . llamada bloque
    (17) empty -> .
    (37) asignacion -> . ID asignacion_push_id IGUAL asignacion_push_igual expresion
    (75) condicion -> . SI LPAREN expresion RPAREN condicion_if LLLAVE estatuto RLLAVE else
    (83) mientras -> . HAZ mientras_haz_push LLLAVE estatuto RLLAVE MIENTRAS LPAREN expresion RPAREN
    (80) para -> . PARA ID ENRANGO LPAREN param COMMA param RPAREN LLLAVE estatuto RLLAVE
    (85) escritura -> . IMPRIME escritura_escribe LPAREN esc RPAREN
    (40) llamada -> . ID LPAREN llamadaparam RPAREN

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for SI resolved as shift
  ! shift/reduce conflict for HAZ resolved as shift
  ! shift/reduce conflict for PARA resolved as shift
  ! shift/reduce conflict for IMPRIME resolved as shift
    FUNCION         reduce using rule 17 (empty -> .)
    RLLAVE          reduce using rule 17 (empty -> .)
    ID              shift and go to state 28
    SI              shift and go to state 20
    HAZ             shift and go to state 27
    PARA            shift and go to state 18
    IMPRIME         shift and go to state 30

  ! ID              [ reduce using rule 17 (empty -> .) ]
  ! SI              [ reduce using rule 17 (empty -> .) ]
  ! HAZ             [ reduce using rule 17 (empty -> .) ]
  ! PARA            [ reduce using rule 17 (empty -> .) ]
  ! IMPRIME         [ reduce using rule 17 (empty -> .) ]

    para                           shift and go to state 26
    asignacion                     shift and go to state 31
    llamada                        shift and go to state 21
    estatuto                       shift and go to state 19
    mientras                       shift and go to state 16
    condicion                      shift and go to state 22
    bloque                         shift and go to state 34
    empty                          shift and go to state 35
    escritura                      shift and go to state 32

state 17

    (19) body -> bloque . body
    (18) body -> . funcion body
    (19) body -> . bloque body
    (20) body -> . empty
    (23) funcion -> . FUNCION funcion_increase_func tipo ID funcion_push_id LPAREN funparam RPAREN LLLAVE vars bloque RLLAVE
    (21) bloque -> . estatuto
    (22) bloque -> . empty
    (17) empty -> .
    (31) estatuto -> . asignacion bloque
    (32) estatuto -> . condicion bloque
    (33) estatuto -> . mientras bloque
    (34) estatuto -> . para bloque
    (35) estatuto -> . escritura bloque
    (36) estatuto -> . llamada bloque
    (37) asignacion -> . ID asignacion_push_id IGUAL asignacion_push_igual expresion
    (75) condicion -> . SI LPAREN expresion RPAREN condicion_if LLLAVE estatuto RLLAVE else
    (83) mientras -> . HAZ mientras_haz_push LLLAVE estatuto RLLAVE MIENTRAS LPAREN expresion RPAREN
    (80) para -> . PARA ID ENRANGO LPAREN param COMMA param RPAREN LLLAVE estatuto RLLAVE
    (85) escritura -> . IMPRIME escritura_escribe LPAREN esc RPAREN
    (40) llamada -> . ID LPAREN llamadaparam RPAREN

  ! shift/reduce conflict for FUNCION resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for SI resolved as shift
  ! shift/reduce conflict for HAZ resolved as shift
  ! shift/reduce conflict for PARA resolved as shift
  ! shift/reduce conflict for IMPRIME resolved as shift
    FUNCION         shift and go to state 29
    RLLAVE          reduce using rule 17 (empty -> .)
    ID              shift and go to state 28
    SI              shift and go to state 20
    HAZ             shift and go to state 27
    PARA            shift and go to state 18
    IMPRIME         shift and go to state 30

  ! FUNCION         [ reduce using rule 17 (empty -> .) ]
  ! ID              [ reduce using rule 17 (empty -> .) ]
  ! SI              [ reduce using rule 17 (empty -> .) ]
  ! HAZ             [ reduce using rule 17 (empty -> .) ]
  ! PARA            [ reduce using rule 17 (empty -> .) ]
  ! IMPRIME         [ reduce using rule 17 (empty -> .) ]

    mientras                       shift and go to state 16
    bloque                         shift and go to state 17
    estatuto                       shift and go to state 19
    llamada                        shift and go to state 21
    condicion                      shift and go to state 22
    empty                          shift and go to state 23
    funcion                        shift and go to state 24
    body                           shift and go to state 36
    para                           shift and go to state 26
    asignacion                     shift and go to state 31
    escritura                      shift and go to state 32

state 18

    (80) para -> PARA . ID ENRANGO LPAREN param COMMA param RPAREN LLLAVE estatuto RLLAVE

    ID              shift and go to state 37


state 19

    (21) bloque -> estatuto .

    FUNCION         reduce using rule 21 (bloque -> estatuto .)
    ID              reduce using rule 21 (bloque -> estatuto .)
    SI              reduce using rule 21 (bloque -> estatuto .)
    HAZ             reduce using rule 21 (bloque -> estatuto .)
    PARA            reduce using rule 21 (bloque -> estatuto .)
    IMPRIME         reduce using rule 21 (bloque -> estatuto .)
    RLLAVE          reduce using rule 21 (bloque -> estatuto .)


state 20

    (75) condicion -> SI . LPAREN expresion RPAREN condicion_if LLLAVE estatuto RLLAVE else

    LPAREN          shift and go to state 38


state 21

    (36) estatuto -> llamada . bloque
    (21) bloque -> . estatuto
    (22) bloque -> . empty
    (31) estatuto -> . asignacion bloque
    (32) estatuto -> . condicion bloque
    (33) estatuto -> . mientras bloque
    (34) estatuto -> . para bloque
    (35) estatuto -> . escritura bloque
    (36) estatuto -> . llamada bloque
    (17) empty -> .
    (37) asignacion -> . ID asignacion_push_id IGUAL asignacion_push_igual expresion
    (75) condicion -> . SI LPAREN expresion RPAREN condicion_if LLLAVE estatuto RLLAVE else
    (83) mientras -> . HAZ mientras_haz_push LLLAVE estatuto RLLAVE MIENTRAS LPAREN expresion RPAREN
    (80) para -> . PARA ID ENRANGO LPAREN param COMMA param RPAREN LLLAVE estatuto RLLAVE
    (85) escritura -> . IMPRIME escritura_escribe LPAREN esc RPAREN
    (40) llamada -> . ID LPAREN llamadaparam RPAREN

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for SI resolved as shift
  ! shift/reduce conflict for HAZ resolved as shift
  ! shift/reduce conflict for PARA resolved as shift
  ! shift/reduce conflict for IMPRIME resolved as shift
    FUNCION         reduce using rule 17 (empty -> .)
    RLLAVE          reduce using rule 17 (empty -> .)
    ID              shift and go to state 28
    SI              shift and go to state 20
    HAZ             shift and go to state 27
    PARA            shift and go to state 18
    IMPRIME         shift and go to state 30

  ! ID              [ reduce using rule 17 (empty -> .) ]
  ! SI              [ reduce using rule 17 (empty -> .) ]
  ! HAZ             [ reduce using rule 17 (empty -> .) ]
  ! PARA            [ reduce using rule 17 (empty -> .) ]
  ! IMPRIME         [ reduce using rule 17 (empty -> .) ]

    para                           shift and go to state 26
    asignacion                     shift and go to state 31
    mientras                       shift and go to state 16
    estatuto                       shift and go to state 19
    llamada                        shift and go to state 21
    condicion                      shift and go to state 22
    bloque                         shift and go to state 39
    empty                          shift and go to state 35
    escritura                      shift and go to state 32

state 22

    (32) estatuto -> condicion . bloque
    (21) bloque -> . estatuto
    (22) bloque -> . empty
    (31) estatuto -> . asignacion bloque
    (32) estatuto -> . condicion bloque
    (33) estatuto -> . mientras bloque
    (34) estatuto -> . para bloque
    (35) estatuto -> . escritura bloque
    (36) estatuto -> . llamada bloque
    (17) empty -> .
    (37) asignacion -> . ID asignacion_push_id IGUAL asignacion_push_igual expresion
    (75) condicion -> . SI LPAREN expresion RPAREN condicion_if LLLAVE estatuto RLLAVE else
    (83) mientras -> . HAZ mientras_haz_push LLLAVE estatuto RLLAVE MIENTRAS LPAREN expresion RPAREN
    (80) para -> . PARA ID ENRANGO LPAREN param COMMA param RPAREN LLLAVE estatuto RLLAVE
    (85) escritura -> . IMPRIME escritura_escribe LPAREN esc RPAREN
    (40) llamada -> . ID LPAREN llamadaparam RPAREN

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for SI resolved as shift
  ! shift/reduce conflict for HAZ resolved as shift
  ! shift/reduce conflict for PARA resolved as shift
  ! shift/reduce conflict for IMPRIME resolved as shift
    FUNCION         reduce using rule 17 (empty -> .)
    RLLAVE          reduce using rule 17 (empty -> .)
    ID              shift and go to state 28
    SI              shift and go to state 20
    HAZ             shift and go to state 27
    PARA            shift and go to state 18
    IMPRIME         shift and go to state 30

  ! ID              [ reduce using rule 17 (empty -> .) ]
  ! SI              [ reduce using rule 17 (empty -> .) ]
  ! HAZ             [ reduce using rule 17 (empty -> .) ]
  ! PARA            [ reduce using rule 17 (empty -> .) ]
  ! IMPRIME         [ reduce using rule 17 (empty -> .) ]

    para                           shift and go to state 26
    asignacion                     shift and go to state 31
    llamada                        shift and go to state 21
    estatuto                       shift and go to state 19
    mientras                       shift and go to state 16
    condicion                      shift and go to state 22
    bloque                         shift and go to state 40
    empty                          shift and go to state 35
    escritura                      shift and go to state 32

state 23

    (20) body -> empty .
    (22) bloque -> empty .

  ! reduce/reduce conflict for RLLAVE resolved using rule 20 (body -> empty .)
    RLLAVE          reduce using rule 20 (body -> empty .)
    FUNCION         reduce using rule 22 (bloque -> empty .)
    ID              reduce using rule 22 (bloque -> empty .)
    SI              reduce using rule 22 (bloque -> empty .)
    HAZ             reduce using rule 22 (bloque -> empty .)
    PARA            reduce using rule 22 (bloque -> empty .)
    IMPRIME         reduce using rule 22 (bloque -> empty .)

  ! RLLAVE          [ reduce using rule 22 (bloque -> empty .) ]


state 24

    (18) body -> funcion . body
    (18) body -> . funcion body
    (19) body -> . bloque body
    (20) body -> . empty
    (23) funcion -> . FUNCION funcion_increase_func tipo ID funcion_push_id LPAREN funparam RPAREN LLLAVE vars bloque RLLAVE
    (21) bloque -> . estatuto
    (22) bloque -> . empty
    (17) empty -> .
    (31) estatuto -> . asignacion bloque
    (32) estatuto -> . condicion bloque
    (33) estatuto -> . mientras bloque
    (34) estatuto -> . para bloque
    (35) estatuto -> . escritura bloque
    (36) estatuto -> . llamada bloque
    (37) asignacion -> . ID asignacion_push_id IGUAL asignacion_push_igual expresion
    (75) condicion -> . SI LPAREN expresion RPAREN condicion_if LLLAVE estatuto RLLAVE else
    (83) mientras -> . HAZ mientras_haz_push LLLAVE estatuto RLLAVE MIENTRAS LPAREN expresion RPAREN
    (80) para -> . PARA ID ENRANGO LPAREN param COMMA param RPAREN LLLAVE estatuto RLLAVE
    (85) escritura -> . IMPRIME escritura_escribe LPAREN esc RPAREN
    (40) llamada -> . ID LPAREN llamadaparam RPAREN

  ! shift/reduce conflict for FUNCION resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for SI resolved as shift
  ! shift/reduce conflict for HAZ resolved as shift
  ! shift/reduce conflict for PARA resolved as shift
  ! shift/reduce conflict for IMPRIME resolved as shift
    FUNCION         shift and go to state 29
    RLLAVE          reduce using rule 17 (empty -> .)
    ID              shift and go to state 28
    SI              shift and go to state 20
    HAZ             shift and go to state 27
    PARA            shift and go to state 18
    IMPRIME         shift and go to state 30

  ! FUNCION         [ reduce using rule 17 (empty -> .) ]
  ! ID              [ reduce using rule 17 (empty -> .) ]
  ! SI              [ reduce using rule 17 (empty -> .) ]
  ! HAZ             [ reduce using rule 17 (empty -> .) ]
  ! PARA            [ reduce using rule 17 (empty -> .) ]
  ! IMPRIME         [ reduce using rule 17 (empty -> .) ]

    mientras                       shift and go to state 16
    bloque                         shift and go to state 17
    estatuto                       shift and go to state 19
    llamada                        shift and go to state 21
    condicion                      shift and go to state 22
    empty                          shift and go to state 23
    funcion                        shift and go to state 24
    body                           shift and go to state 41
    para                           shift and go to state 26
    asignacion                     shift and go to state 31
    escritura                      shift and go to state 32

state 25

    (1) programa -> PROGRAMA ID LLLAVE programa_push_id vars programa_push_dict body . RLLAVE

    RLLAVE          shift and go to state 42


state 26

    (34) estatuto -> para . bloque
    (21) bloque -> . estatuto
    (22) bloque -> . empty
    (31) estatuto -> . asignacion bloque
    (32) estatuto -> . condicion bloque
    (33) estatuto -> . mientras bloque
    (34) estatuto -> . para bloque
    (35) estatuto -> . escritura bloque
    (36) estatuto -> . llamada bloque
    (17) empty -> .
    (37) asignacion -> . ID asignacion_push_id IGUAL asignacion_push_igual expresion
    (75) condicion -> . SI LPAREN expresion RPAREN condicion_if LLLAVE estatuto RLLAVE else
    (83) mientras -> . HAZ mientras_haz_push LLLAVE estatuto RLLAVE MIENTRAS LPAREN expresion RPAREN
    (80) para -> . PARA ID ENRANGO LPAREN param COMMA param RPAREN LLLAVE estatuto RLLAVE
    (85) escritura -> . IMPRIME escritura_escribe LPAREN esc RPAREN
    (40) llamada -> . ID LPAREN llamadaparam RPAREN

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for SI resolved as shift
  ! shift/reduce conflict for HAZ resolved as shift
  ! shift/reduce conflict for PARA resolved as shift
  ! shift/reduce conflict for IMPRIME resolved as shift
    FUNCION         reduce using rule 17 (empty -> .)
    RLLAVE          reduce using rule 17 (empty -> .)
    ID              shift and go to state 28
    SI              shift and go to state 20
    HAZ             shift and go to state 27
    PARA            shift and go to state 18
    IMPRIME         shift and go to state 30

  ! ID              [ reduce using rule 17 (empty -> .) ]
  ! SI              [ reduce using rule 17 (empty -> .) ]
  ! HAZ             [ reduce using rule 17 (empty -> .) ]
  ! PARA            [ reduce using rule 17 (empty -> .) ]
  ! IMPRIME         [ reduce using rule 17 (empty -> .) ]

    para                           shift and go to state 26
    asignacion                     shift and go to state 31
    llamada                        shift and go to state 21
    estatuto                       shift and go to state 19
    mientras                       shift and go to state 16
    condicion                      shift and go to state 22
    bloque                         shift and go to state 43
    empty                          shift and go to state 35
    escritura                      shift and go to state 32

state 27

    (83) mientras -> HAZ . mientras_haz_push LLLAVE estatuto RLLAVE MIENTRAS LPAREN expresion RPAREN
    (84) mientras_haz_push -> .

    LLLAVE          reduce using rule 84 (mientras_haz_push -> .)

    mientras_haz_push              shift and go to state 44

state 28

    (37) asignacion -> ID . asignacion_push_id IGUAL asignacion_push_igual expresion
    (40) llamada -> ID . LPAREN llamadaparam RPAREN
    (38) asignacion_push_id -> .

    LPAREN          shift and go to state 45
    IGUAL           reduce using rule 38 (asignacion_push_id -> .)

    asignacion_push_id             shift and go to state 46

state 29

    (23) funcion -> FUNCION . funcion_increase_func tipo ID funcion_push_id LPAREN funparam RPAREN LLLAVE vars bloque RLLAVE
    (24) funcion_increase_func -> .

    ENTERO          reduce using rule 24 (funcion_increase_func -> .)
    DECIMAL         reduce using rule 24 (funcion_increase_func -> .)
    FRASE           reduce using rule 24 (funcion_increase_func -> .)
    ESVERDAD        reduce using rule 24 (funcion_increase_func -> .)

    funcion_increase_func          shift and go to state 47

state 30

    (85) escritura -> IMPRIME . escritura_escribe LPAREN esc RPAREN
    (86) escritura_escribe -> .

    LPAREN          reduce using rule 86 (escritura_escribe -> .)

    escritura_escribe              shift and go to state 48

state 31

    (31) estatuto -> asignacion . bloque
    (21) bloque -> . estatuto
    (22) bloque -> . empty
    (31) estatuto -> . asignacion bloque
    (32) estatuto -> . condicion bloque
    (33) estatuto -> . mientras bloque
    (34) estatuto -> . para bloque
    (35) estatuto -> . escritura bloque
    (36) estatuto -> . llamada bloque
    (17) empty -> .
    (37) asignacion -> . ID asignacion_push_id IGUAL asignacion_push_igual expresion
    (75) condicion -> . SI LPAREN expresion RPAREN condicion_if LLLAVE estatuto RLLAVE else
    (83) mientras -> . HAZ mientras_haz_push LLLAVE estatuto RLLAVE MIENTRAS LPAREN expresion RPAREN
    (80) para -> . PARA ID ENRANGO LPAREN param COMMA param RPAREN LLLAVE estatuto RLLAVE
    (85) escritura -> . IMPRIME escritura_escribe LPAREN esc RPAREN
    (40) llamada -> . ID LPAREN llamadaparam RPAREN

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for SI resolved as shift
  ! shift/reduce conflict for HAZ resolved as shift
  ! shift/reduce conflict for PARA resolved as shift
  ! shift/reduce conflict for IMPRIME resolved as shift
    FUNCION         reduce using rule 17 (empty -> .)
    RLLAVE          reduce using rule 17 (empty -> .)
    ID              shift and go to state 28
    SI              shift and go to state 20
    HAZ             shift and go to state 27
    PARA            shift and go to state 18
    IMPRIME         shift and go to state 30

  ! ID              [ reduce using rule 17 (empty -> .) ]
  ! SI              [ reduce using rule 17 (empty -> .) ]
  ! HAZ             [ reduce using rule 17 (empty -> .) ]
  ! PARA            [ reduce using rule 17 (empty -> .) ]
  ! IMPRIME         [ reduce using rule 17 (empty -> .) ]

    para                           shift and go to state 26
    asignacion                     shift and go to state 31
    llamada                        shift and go to state 21
    estatuto                       shift and go to state 19
    mientras                       shift and go to state 16
    condicion                      shift and go to state 22
    bloque                         shift and go to state 49
    empty                          shift and go to state 35
    escritura                      shift and go to state 32

state 32
